MotoActions: Disable startup provider.
fixes:
Attribute provider#androidx.startup.InitializationProvider@authorities value=(androidx.legacy.preference.androidx-startup) from AndroidManifest.xml:34:13-78
        is also present at AndroidManifest.xml:43:13-75 value=(com.android.settingslib.androidx-startup).
        Suggestion: add 'tools:replace="android:authorities"' to <provider> element at AndroidManifest.xml.fixed:32:9-43:20 to override.

Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,11 @@
         android:persistent="true">
 
         <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:replace="android:authorities"/>
+
+        <provider
             android:name=".MotoActionsSearchIndexablesProvider"
             android:authorities="com.moto.actions"
             android:multiprocess="false"
